--- a/src/assets/css/commonCss.css
+++ b/src/assets/css/commonCss.css
@@ -1427,7 +1427,11 @@
 }
 
 .f-column {
-  flex-direction: column;
+  flex-direction: column !important;
+}
+
+.f-row{
+  flex-direction: row !important;
 }
 
 .j-end {
